# mrtrix3-ci-test

./: CMakeLists.txt  CMakePresets.json  cmake-instructions.md  install_mime_types.sh  update_cmake  update_copyright  vcpkg.json
.github/workflows/: checks.yml  clang-tidy.yml  cmake.yml  nightly-releases.yml  package-linux-tarball.yml  package.yml  releases.yml  weekly-releases.yml
cmake/: BashTests.cmake  FindVersion.cmake
cmd/: CMakeLists.txt  mrcat2.cpp
core/file/dicom/: image.cpp
core/math/: SH.h  rng.h
packaging/: package-linux-tarball.sh
packaging/macos/: build
packaging/mingw/: PKGBUILD
python/: CMakeLists.txt
share/: CMakeLists.txt
src/dwi/tractography/: rng.h
src/registration/transform/: base.cpp
